// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HarpnotesLayout > full sheet snapshot > single_note sheet matches snapshot 1`] = `
{
  "Annotation": 9,
  "Ellipse": 1,
  "Path": 3,
}
`;

exports[`HarpnotesLayout > full sheet snapshot > two_voices sheet matches snapshot 1`] = `
{
  "Annotation": 9,
  "Ellipse": 10,
  "FlowLine": 7,
  "Path": 3,
}
`;

exports[`HarpnotesLayout > single_note > matches snapshot 1`] = `
[
  {
    "center": [
      60.3,
      18,
    ],
    "color": "black",
    "confKey": "extract.0.notebound.nconf.v_1.t_0.n_0.***",
    "dotted": false,
    "fill": "filled",
    "hasbarover": false,
    "lineWidth": 0.5,
    "more_conf_keys": [
      {
        "conf_key": "extract.0.notebound.nconf.v_1.t_0.n_0.nshift",
        "icon": "fa fa-arrow-left",
        "text": "shift left",
        "value": -0.5,
      },
      {
        "conf_key": "extract.0.notebound.nconf.v_1.t_0.n_0.nshift",
        "icon": "fa fa-arrow-right",
        "text": "shift right",
        "value": 0.5,
      },
      {
        "icon": "fa fa-arrows-v",
        "text": "---",
        "value": 0.5,
      },
      {
        "conf_key": "extract.0.notebound.minc.0.minc_f",
        "icon": "fa fa-arrows-v",
        "text": "Edit Minc",
      },
      {
        "conf_key": "extract.0.notebound.minc.0.minc_f",
        "icon": "fa fa-arrow-down",
        "text": "increase Minc",
        "value": 0.5,
      },
      {
        "conf_key": "extract.0.notebound.minc.0.minc_f",
        "icon": "fa fa-arrow-up",
        "text": "decrease Minc",
        "value": -0.5,
      },
    ],
    "origin": {
      "barDecorations": [],
      "beat": 0,
      "countNote": "4",
      "decorations": [],
      "duration": 16,
      "endPos": [
        9,
        9,
      ],
      "firstInPart": false,
      "jumpEnds": [],
      "jumpStarts": [],
      "lyrics": null,
      "measureCount": 0,
      "measureStart": false,
      "pitch": 48,
      "slurEnds": [],
      "slurStarts": [],
      "startPos": [
        9,
        8,
      ],
      "tieEnd": false,
      "tieStart": false,
      "time": 0,
      "tuplet": 1,
      "tupletEnd": false,
      "tupletStart": false,
      "type": "Note",
      "variant": 0,
      "visible": true,
      "znId": "0",
    },
    "rect": false,
    "size": [
      2.625,
      1.275,
    ],
    "type": "Ellipse",
    "visible": true,
    "znId": "0",
  },
]
`;
